<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="start"
    android:orientation="horizontal"
    android:padding="5dip" >

    <TextView
        android:id="@+id/txtvalorunitario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtnomeproduto"
        android:layout_below="@+id/txtnomeproduto"
        android:text="@string/valor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtvalortotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtvalorunitario"
        android:layout_alignBottom="@+id/txtvalorunitario"
        android:layout_alignParentRight="true"
        android:text="@string/valor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtnomeproduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/nomeProduto"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtquantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtvalorunitario"
        android:layout_alignBottom="@+id/txtvalorunitario"
        android:layout_centerHorizontal="true"
        android:text="@string/quantidade"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>